<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2022, 2025 Contributors to the Eclipse Foundation
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>jakarta.data</groupId>
        <artifactId>jakarta.data-parent</artifactId>
        <version>1.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>jakarta.data-api</artifactId>
    <name>Jakarta Data API</name>
    <description>Jakarta Data :: API</description>

    <properties>
        <assertj.version>3.27.3</assertj.version>
        <!-- default is the same for backward compatibility reason
        Easy to override when building with a system property -->
        <spec.version>1.0</spec.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta.annotation.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>


            <!-- 
            Create Javadoc for API jar
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-api-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>21</source>
                            <quiet>true</quiet>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                            <description>Jakarta Data API documentation</description>
                            <doctitle>Jakarta Data API documentation</doctitle>
                            <windowtitle>Jakarta Data API documentation</windowtitle>
                            <header><![CDATA[<br>Jakarta Data API v${spec.version}]]></header>
                            <bottom><![CDATA[
Comments to: <a href="mailto:data-dev@eclipse.org">data-dev@eclipse.org</a>.<br>
Copyright &#169; 2024 Eclipse Foundation. All rights reserved.<br>
Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
                            </bottom>
                            <docfilessubdirs>true</docfilessubdirs>
                            <groups>
                                <group>
                                    <title>Jakarta Data API Documentation</title>
                                    <packages>
                                        jakarta.data
                                    </packages>
                                </group>
                            </groups>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.26.0</version>
                <configuration>
                    <rulesets>
                        <ruleset>src/main/resources/rules.xml</ruleset>
                    </rulesets>
                    <failOnViolation>true</failOnViolation>
                    <printFailingErrors>true</printFailingErrors>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>6.0.0</version>
                <configuration>
                    <niceManifest>true</niceManifest>
                    <instructions>
                        <Bundle-Description>Jakarta Data ${spec.version} API jar</Bundle-Description>
                        <Bundle-Name>Jakarta Data API jar</Bundle-Name>
                        <Bundle-SymbolicName>jakarta.data-api</Bundle-SymbolicName>
                        <Bundle-Version>${spec.version}</Bundle-Version>
                        <Extension-Name>jakarta.data</Extension-Name>
                        <Implementation-Version>${project.version}</Implementation-Version>
                        <Specification-Vendor>Eclipse Foundation</Specification-Vendor>
                        <Specification-Version>${spec.version}</Specification-Version>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <id>osgi-manifest</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>